--- a/web/src/components/Button/styles.css
+++ b/web/src/components/Button/styles.css
@@ -2,6 +2,7 @@
     min-width: 30rem;
     height: 5.6rem;
     border: none;
+    margin-top: 4rem;
 
     background-color: var(--color-secondary);
     color: #FFF;
@@ -10,6 +11,7 @@
     font-size: 1.6rem;
 
     width: 100%;
+    cursor: pointer;
 }
 
 .button:disabled{
@@ -17,6 +19,7 @@
     height: 5.6rem;
     border: none;
     width: 100%;
+    cursor: not-allowed;
     
 
     
