--- a/web/src/pages/Login/styles.css
+++ b/web/src/pages/Login/styles.css
@@ -61,7 +61,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 2.4rem 0;
+  margin-top: 2.4rem;
 }
 
 #login-content .login form .login-commands .remember-me div {
